--- a/nouislider/nouislider.css
+++ b/nouislider/nouislider.css
@@ -141,7 +141,7 @@
   */
  .noUi-handle:before,
  .noUi-handle:after {
-   content: "";
+   content: '';
    display: block;
    position: absolute;
    height: 14px;
